<resources>
    <string name="app_name">HW_10.5</string>
    <string name="code">Введите код</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="del">&#60;</string>
    <string name="btn_ok">OK</string>

    <string name="_0">0</string>
    <string name="kz">Казахстан</string>
    <string name="kz_currency">Тенге</string>
    <string name="kz_full">Тенге, Казахстан</string>
    <string name="usa">США</string>
    <string name="usa_currency">Доллары</string>
    <string name="usa_full">Доллары, США</string>
    <string name="tr">Турция</string>
    <string name="tr_currency">Лира</string>
    <string name="tr_full">Лира, Турция</string>
    <string name="eu">EC</string>
    <string name="eu_currency">Евро</string>
    <string name="eu_full">Евро, EC</string>
    <string name="rus">Россия</string>
    <string name="rus_currency">Рубль</string>
    <string name="rus_full">Рубль, Россия</string>
    <string name="flag">flag</string>
    <string name="add">Добавить</string>

    <string name="tb_convertor">Convertor</string>
    <string name="tb_item_selected">Item Selected</string>
    <string name="tb_chat">Chat</string>
    <string name="tb_favorites">Favorites</string>
    <string name="tb_favorites_kz">Qyzyqty kontent</string>
    <string name="tb_search">Search</string>
    <string name="tb_account">Account</string>

    <string name="menu_main">Menu Main</string>
    <string name="menu_main_sort">Сортировать по</string>
    <string name="menu_main_reset">Сбросить сортировку</string>
    <string name="menu_main_sort_alpha">Алфавиту</string>
    <string name="menu_main_sort_num">Стоимости</string>

    <string name="delete">Удалить</string>
    <string name="delete_confirmation">Вы уверены, что хотите удалить валюту?</string>
    <string name="df_delete_cancel">Отмена</string>
    <string name="df_delete_confirm">Удалить</string>

    <string name="bnv_chat">Chat</string>
    <string name="bnv_convertor">Convertor</string>
    <string name="bnv_favorites">Favorites</string>
    <string name="bnv_search">Search</string>
    <string name="bnv_account">Account</string>
    <string name="bsd_convertor_name_country">Название страны</string>
    <string name="bsd_convertor_name_hint">Название валюты</string>
    <string name="bsd_convertor_amount_hint">Кол. тенге в валюте</string>
    <string name="bsd_convertor_btn_flag">Выбрать флаг</string>
    <string name="search_hint">Поиск валюты</string>

    <string name="account_tab_main">Основные</string>
    <string name="account_tab_statistics">Статистика</string>
    <string name="account_tab_another">Еще один таб</string>
    <string name="tv_contacts">Azat Serzhanov\nazatserzhan@gmail.com</string>
    <string name="btn_share">Поделиться</string>
    <string name="btn_email">Отправить по почте</string>
    <string name="btn_call">Позвонить</string>
    <string name="btn_camera">Запустить камеру</string>
    <string name="vp_tv_statistics_quantity">Кол конвертации:</string>
    <string name="vp_tv_statistics_quantity_2">23423</string>
    <string name="vp_tv_statistics_time">Проведенное время:</string>
    <string name="vp_tv_statistics_time_2">51 мин</string>
    <string name="update">Update</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>