<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pin_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_pin_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <kz.kd.hw_105.TVCustomPIN
            android:id="@+id/first_digit"
            style="@style/custom_code_style" />

        <kz.kd.hw_105.TVCustomPIN
            android:id="@+id/second_digit"
            style="@style/custom_code_style" />

        <kz.kd.hw_105.TVCustomPIN
            android:id="@+id/third_digit"
            style="@style/custom_code_style" />

        <kz.kd.hw_105.TVCustomPIN
            android:id="@+id/forth_digit"
            style="@style/custom_code_style"
            android:layout_marginEnd="0dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_pin_code"
        style="@style/code_style"
        android:layout_marginBottom="32dp"
        android:hint="@string/code"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_one"
        style="@style/btn_style"
        android:layout_marginEnd="24dp"
        android:text="@string/one"
        app:layout_constraintEnd_toStartOf="@id/btn_two"
        app:layout_constraintTop_toTopOf="@id/btn_two" />

    <Button
        android:id="@+id/btn_two"
        style="@style/btn_style"
        android:layout_marginBottom="24dp"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@id/btn_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_three"
        style="@style/btn_style"
        android:layout_marginStart="24dp"
        android:text="@string/three"
        app:layout_constraintStart_toEndOf="@id/btn_two"
        app:layout_constraintTop_toTopOf="@id/btn_two" />

    <Button
        android:id="@+id/btn_four"
        style="@style/btn_style"
        android:layout_marginEnd="24dp"
        android:text="@string/four"
        app:layout_constraintEnd_toStartOf="@id/btn_five"
        app:layout_constraintTop_toTopOf="@id/btn_five" />

    <Button
        android:id="@+id/btn_five"
        style="@style/btn_style"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_six"
        style="@style/btn_style"
        android:layout_marginStart="24dp"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@id/btn_five"
        app:layout_constraintTop_toTopOf="@id/btn_five" />


    <Button
        android:id="@+id/btn_seven"
        style="@style/btn_style"
        android:layout_marginEnd="24dp"
        android:text="@string/seven"
        app:layout_constraintEnd_toStartOf="@id/btn_eight"
        app:layout_constraintTop_toTopOf="@id/btn_eight" />

    <Button
        android:id="@+id/btn_eight"
        style="@style/btn_style"
        android:layout_marginTop="24dp"
        android:text="@string/eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_five" />

    <Button
        android:id="@+id/btn_nine"
        style="@style/btn_style"
        android:layout_marginStart="24dp"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@id/btn_eight"
        app:layout_constraintTop_toTopOf="@id/btn_eight" />

    <Button
        android:id="@+id/btn_del"
        style="@style/btn_style"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_bg"
        android:text="@string/del"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btn_zero"
        app:layout_constraintTop_toTopOf="@id/btn_zero" />

    <Button
        android:id="@+id/btn_zero"
        style="@style/btn_style"
        android:layout_marginTop="24dp"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_eight" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/btn_style"
        android:layout_marginStart="24dp"
        android:background="@drawable/btn_ok_bg_selector"
        android:text="@string/ok"
        android:textColor="@color/btn_bg_blue"
        app:layout_constraintStart_toEndOf="@id/btn_zero"
        app:layout_constraintTop_toTopOf="@id/btn_zero" />
</androidx.constraintlayout.widget.ConstraintLayout>