<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_share"
        style="@style/btn_contacts"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_email"
        style="@style/btn_contacts"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_share" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_call"
        style="@style/btn_contacts"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_camera"
        style="@style/btn_contacts"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_call" />

</androidx.constraintlayout.widget.ConstraintLayout>