<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/vp_tv_statistics_quantity"
        style="@style/vp_tv_statistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vp_tv_statistics_quantity"
        app:layout_constraintEnd_toStartOf="@id/vp_tv_statistics_quantity_2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/vp_tv_statistics_quantity_2"
        style="@style/vp_tv_statistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vp_tv_statistics_quantity_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/vp_tv_statistics_time"
        style="@style/vp_tv_statistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vp_tv_statistics_time"
        app:layout_constraintEnd_toStartOf="@id/vp_tv_statistics_time_2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vp_tv_statistics_quantity" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/vp_tv_statistics_time_2"
        style="@style/vp_tv_statistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vp_tv_statistics_time_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/vp_tv_statistics_quantity_2" />

</androidx.constraintlayout.widget.ConstraintLayout>