<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toTopOf="@id/tv_contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_contacts"
        style="@style/tv_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_contacts"
        app:layout_constraintBottom_toTopOf="@id/account_tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/account_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@drawable/tab_layout_selector"
        app:tabGravity="center"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/btn_bg_blue"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="bottom"
        app:tabIndicatorHeight="2dp"
        app:tabMinWidth="200dp"
        app:tabMode="scrollable"
        app:tabPaddingEnd="32dp"
        app:tabPaddingStart="32dp"
        app:tabSelectedTextColor="@color/btn_bg_blue"
        app:tabTextAppearance="@style/tab_layout_text"
        app:tabTextColor="@color/tv_text_color_2">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/account_tab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_tab_main" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/account_tab_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_tab_statistics" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/account_tab_another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_tab_another" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/account_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_tab_layout"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>