<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_l_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/btn_text_color"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/btn_text_color"
        app:layout_constraintBottom_toTopOf="@id/hsv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_it_search"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/search_hint"
            android:textColor="@color/tv_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toTopOf="@id/image_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_l_search">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/search_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/chip_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kz"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usa"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tr"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eu"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rus"
                android:theme="@style/Theme.MaterialComponents.Light" />
        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_search_kz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hsv" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_search_eu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_search_usa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_search_rus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_3" />

</androidx.constraintlayout.widget.ConstraintLayout>