<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bsd_convertor_currency_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/btn_text_color"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/btn_text_color"
        app:layout_constraintBottom_toTopOf="@id/bsd_convertor_currency_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bsd_convertor_et_currency_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/bsd_convertor_name_country"
            android:textColor="@color/tv_text_color"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bsd_convertor_currency_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/btn_text_color"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/btn_text_color"
        app:layout_constraintBottom_toTopOf="@id/bsd_convertor_currency_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bsd_convertor_currency_country">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bsd_convertor_et_currency_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/bsd_convertor_name_hint"
            android:textColor="@color/tv_text_color"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bsd_convertor_currency_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/btn_text_color"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/btn_text_color"
        app:layout_constraintBottom_toTopOf="@id/bsd_convertor_btn_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bsd_convertor_currency_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bsd_convertor_et_currency_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/bsd_convertor_amount_hint"
            android:textColor="@color/tv_text_color"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bsd_convertor_btn_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_bg_bsd_convertor"
        android:backgroundTint="@null"
        android:fontFamily="@font/montserrat_light"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/bsd_convertor_btn_flag"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/bsd_convertor_btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bsd_convertor_currency_amount" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bsd_convertor_btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_bg_bsd_convertor"
        android:backgroundTint="@null"
        android:fontFamily="@font/montserrat_light"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/add"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bsd_convertor_btn_flag" />
</androidx.constraintlayout.widget.ConstraintLayout>